chore: Tour components 제작 중